force-app/main/default/objects/BET_EDP_Source_Mapping__mdt/BET_EDP_Source_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>used in apex class: BET_BDD_Search_Controller to get the data source mapping based on the region and entity type</description>
    <label>BET EDP Source Mapping</label>
    <pluralLabel>BET EDP Source Mapping</pluralLabel>
</CustomObject>