force-app/main/default/objects/BET_EDP_Source_Mapping__mdt/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
                <default>true</default>
                <label>Bank</label>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Counterparty</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>