force-app/main/default/objects/BET_EDP_Source_Mapping__mdt/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <label>Primary Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankers Almanac</fullName>
                <default>true</default>
                <label>Bankers Almanac</label>
            </value>
            <value>
                <fullName>Orbis</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>