force-app/main/default/objects/BET_EDP_Source_Mapping__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WONA</fullName>
                <default>true</default>
                <label>WONA</label>
            </value>
            <value>
                <fullName>SENA</fullName>
            </value>
            <value>
                <fullName>STUSCO</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>