force-app/main/default/objects/BET_EDP_Source_Mapping__mdt/fields/Tertiary_Source__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Source__c</fullName>
    <label>Tertiary Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>